# BOM1

./: .gitignore  BOM自动完善工具_20260624.spec  BOM表自动完善工具 - 开发指导文档.md  README.md  pyproject.toml
bom_tool/: __init__.py  cli.py  main.py  models.py
bom_tool/adapters/: __init__.py  base_adapter.py  hqchip_adapter.py  lcsc_adapter.py  mock_adapter.py  registry.py  search_link_adapter.py
bom_tool/core/: bom_pipeline.py  data_cleaner.py  file_parser.py  file_writer.py  task_manager.py
bom_tool/db/: cache_db.py
bom_tool/ui/: main_window.py
bom_tool/utils/: __init__.py
docs/: BOM自动完善工具_使用说明书.md  PRD-技术任务拆解.md  curl-cffi-migration-summary.md  优化记录.md
samples/: SB-TX 20260614_BOM.xlsx  sample_bom.xlsx  single_lcsc.csv
scripts/: README.md  create_sample_bom.py  run_mock_pipeline.ps1
tests/: conftest.py  test_bom_pipeline.py  test_cache_db.py  test_data_cleaner.py  test_file_writer.py  test_hqchip_adapter.py  test_lcsc_adapter.py  test_main_window.py  test_mock_adapter.py  test_registry.py  test_task_manager.py
