[project]
name = "bom-auto-complete-tool"
version = "0.1.0"
description = "Desktop tool for completing BOM files with supplier inventory and price data."
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "openpyxl>=3.1",
    "pandas>=2.2",
]

[project.scripts]
bom-tool = "bom_tool.cli:main"
bom-tool-gui = "bom_tool.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
